# data-challenge

./: README.md
pipeline_anomaly/: Makefile  README.md  docker-compose.yaml  pyproject.toml
pipeline_anomaly/airflow/dags/: pipeline_anomaly_dag.py
pipeline_anomaly/config/: pipeline.yaml
pipeline_anomaly/data/kafka_mock/: events.ndjson
pipeline_anomaly/grafana/dashboards/: pipeline.json
pipeline_anomaly/grafana/provisioning/dashboards/: pipeline.yaml
pipeline_anomaly/grafana/provisioning/datasources/: clickhouse.yaml
pipeline_anomaly/src/pipeline_anomaly/application/use_cases/: compute_aggregates.py  load_dataset.py
pipeline_anomaly/src/pipeline_anomaly/domain/models/: aggregate.py
pipeline_anomaly/src/pipeline_anomaly/domain/services/: interfaces.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/: config.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/alerting/: http_sink.py  slack_sink.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/data_quality/: pandas_checker.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/detectors/: hdbscan.py  iqr.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/generators/: synthetic_generator.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/repositories/: clickhouse_repository.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/sources/: __init__.py  kafka_file_source.py  web3_stub.py
pipeline_anomaly/src/pipeline_anomaly/presentation/: cli.py
pipeline_anomaly/tests/: test_generator.py  test_kafka_source.py  test_quality_checker.py  test_use_cases.py
